# Speech-Recognition

./: CMakeLists.txt
src/cpp/: devcontainer.json  main.cpp
src/cpp/corpus/: CMakeLists.txt
src/cpp/corpus/include/: corpus.hpp
src/cpp/corpus/src/: textCorpusReader.cpp
src/cpp/fileIO/: CMakeLists.txt
src/cpp/models/: CMakeLists.txt
src/cpp/models/include/: models.hpp
src/cpp/models/src/: nGramModel.cpp
src/cpp/tokenizers/: CMakeLists.txt
src/cpp/tokenizers/include/: tokenizer.hpp
src/cpp/tokenizers/src/: tokenizer.cpp
src/cpp/util/: CMakeLists.txt
src/cpp/util/include/: util.hpp
src/cpp/util/src/: util.cpp
src/python/audio_processing/: __init__.py  pre_processing_helpers.py  spectrogram_helpers.py
src/python/justext/: core.py
src/python/tokenizer/: __init__.py  tokenizer.py
test-files/: test_audio.py  test_justext.py  test_rltk.py  test_tensorflow.py  test_video.py
